<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <SurfaceView
        android:id="@+id/game_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/menu_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="#CC000000"
        android:gravity="center">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btn_load_rom"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_rom"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_load_core"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_core"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_save_state"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save_state"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_load_state"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/load_state"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_margin="5dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>